Improved initialized items on multiple samples

--- a/GanttChartLightLibraryDemos/Demos/Samples.Resources/Silverlight-VisualBasic/GanttChartDataGrid/MainFeatures/MainFeatures.vbproj
+++ b/GanttChartLightLibraryDemos/Demos/Samples.Resources/Silverlight-VisualBasic/GanttChartDataGrid/MainFeatures/MainFeatures.vbproj
@@ -63,6 +63,7 @@
     <DefineTrace>true</DefineTrace>
     <NoStdLib>true</NoStdLib>
     <NoConfig>true</NoConfig>
+    <MyType>Empty</MyType>
     <Optimize>true</Optimize>
     <OutputPath>Bin\Release</OutputPath>
     <DocumentationFile>GanttChartDataGridVisualBasicSample.xml</DocumentationFile>
